--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -97,7 +97,7 @@
                 <canvas id="tests-canvas" width="100" height="100"></canvas>
                 <h2>Tests</h2>
                 <div class="list-group">
-                    <p id="tests-results" class="list-group-item list-group-item-action">3 passed, 3 total</p>
+                    <p id="tests-results" class="list-group-item list-group-item-action">4 passed, 4 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -129,13 +129,13 @@
   &quot;numFailedTestSuites&quot;: 0,
   &quot;numFailedTests&quot;: 0,
   &quot;numPassedTestSuites&quot;: 1,
-  &quot;numPassedTests&quot;: 3,
+  &quot;numPassedTests&quot;: 4,
   &quot;numPendingTestSuites&quot;: 0,
   &quot;numPendingTests&quot;: 0,
   &quot;numRuntimeErrorTestSuites&quot;: 0,
   &quot;numTodoTests&quot;: 0,
   &quot;numTotalTestSuites&quot;: 1,
-  &quot;numTotalTests&quot;: 3,
+  &quot;numTotalTests&quot;: 4,
   &quot;openHandles&quot;: [],
   &quot;snapshot&quot;: {
     &quot;added&quot;: 0,
@@ -153,21 +153,21 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1720795208768,
+  &quot;startTime&quot;: 1720795974500,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 3,
+      &quot;numPassingTests&quot;: 4,
       &quot;numPendingTests&quot;: 0,
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1720795209563,
-        &quot;runtime&quot;: 707,
+        &quot;end&quot;: 1720795975082,
+        &quot;runtime&quot;: 502,
         &quot;slow&quot;: false,
-        &quot;start&quot;: 1720795208856
+        &quot;start&quot;: 1720795974580
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -185,7 +185,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 115,
+          &quot;duration&quot;: 89,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Cadastrar um novo conteúdo e verificar que o conteúdo está devidamente retornando os dados esperados e o statusCode 201.&quot;,
@@ -200,7 +200,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 8,
+          &quot;duration&quot;: 7,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Realizar a consulta do conteúdo em que acabou de cadastrar, retornando os dados esperados e o statusCode 200.&quot;,
@@ -215,7 +215,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Suite de testes da api conteudos..&quot;
           ],
-          &quot;duration&quot;: 38,
+          &quot;duration&quot;: 14,
           &quot;failureDetails&quot;: [],
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.&quot;,
@@ -225,6 +225,21 @@
           &quot;retryReasons&quot;: [],
           &quot;status&quot;: &quot;passed&quot;,
           &quot;title&quot;: &quot;Você deverá alterar o conteúdo consultado anteriormente, e em seguida validar se realmente os dados foram alterados e o statusCode 201.&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Suite de testes da api conteudos..&quot;
+          ],
+          &quot;duration&quot;: 11,
+          &quot;failureDetails&quot;: [],
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Suite de testes da api conteudos.. Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;,
+          &quot;invocations&quot;: 1,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 1,
+          &quot;retryReasons&quot;: [],
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Remover o conteúdo e garantir que o mesmo foi removido, não existe mais para consulta e o statusCode 200.&quot;
         }
       ],
       &quot;failureMessage&quot;: null
@@ -286,7 +301,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Projetos\\test-api&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: 1229344049,
+  &quot;seed&quot;: 1342209362,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
